# text-pair

./: .dockerignore  .gitignore  Dockerfile  NOTICE.md  README.md  REFERENCES.md  compareNgrams  compareNgrams.go  compare_ngrams.py  config.ini  docker_autostart.sh  generate_ngrams.py  install.sh  requirements.txt  sequence_aligner.py  textpair
api/: text_pair.py
api_server/: textpair.service  web_server.sh
config/: appConfig.json  config.ini  global_settings.ini  sa_config.ini  vsa_config.ini
docker/: Dockerfile  docker_autostart.sh
docs/: instructions.md  specification.md  ubuntu_installation.md
docs/french/: installing.md  quickstart.md
extras/: backup_database.py  delete_textpair_dbs.py  restore_database.py
lib/: MANIFEST.in  pyproject.toml  setup.py
lib/core/: compareNgrams.go
lib/core/binary/aarch64/: compareNgrams
lib/core/binary/arm/: compareNgrams
lib/core/binary/darwin/: compareNgrams
lib/core/binary/linux_x64/: compareNgrams
lib/core/binary/macos/: compareNgrams
lib/core/binary/x86_64/: compareNgrams
lib/core/src/: compareNgrams.go  mergeAlignments.go
lib/core/src/compareNgrams/: go.mod  go.sum  main.go  mergeAlignments.go
lib/scripts/: textalign  textpair
lib/textalign/: __init__.py  generate_ngrams.py  parse_config.py  text_align.py  web_loader.py  xml_parser.py
lib/textpair/: __init__.py  __main__.py  alignment_merger.py  banality_finder.py  compare_ngrams.py  generate_ngrams.py  llama_server_manager.py  llm_evaluation.py  parse_config.py  passage_classifier.py  text_parser.py  utils.py  vector_similarity.py  vector_space_aligner.py  web_loader.py  xml_parser.py
lib/textpair.egg-info/: entry_points.txt
lib/textpair/sequence_alignment/: __init__.py  alignment_merger.py  banality_finder.py  generate_ngrams.py
lib/textpair/vector_space_alignment/: __init__.py  corpus.py  expansion.py  llm_evaluation.py  structures.py
lib/textpair_graph/: README.md  pyproject.toml
lib/textpair_graph/textpair_graph/: __init__.py  __main__.py  build_graph_model.py  label_clusters.py
lib/textpair_graph/textpair_graph.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
lib/textpair_llm/: README.md  pyproject.toml
lib/textpair_llm/textpair_llm/: __init__.py  llama_server_manager.py  llm_evaluation.py
lib/textpair_llm/textpair_llm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
utils/: postgres_loader.py  xml_parser.py
utils/web/: web_app.wsgi
utils/web/templates/: base.html  results.html  search.html
web/: apache_htaccess.conf  apache_wsgi.conf  web_loader.py
web-app/: index.html  package-lock.json  package.json  vite.config.js  vue.config.js
web-app/public/: index.html
web-app/src/: App.vue  main.js
web-app/src/assets/: theme.module.scss
web-app/src/components/: alignmentGroup.vue  citations.vue  diffStrings.js  header.vue  home.vue  networkGraph.vue  passagePair.vue  reportSwitcher.vue  searchArguments.vue  searchForm.vue  searchResults.vue  semanticGraph.vue  sortedResults.vue  textNavigation.vue  timeSeries.vue
web-app/src/router/: index.js
web-app/src/store/: index.js
web/web_app/: .babelrc  README.md  appConfig.json  babel.config.js  index.html  package-lock.json  package.json  vue.config.js
web/web_app/public/: index.html
web/web_app/src/: App.vue  main.js
web/web_app/src/components/: diffMatchPatch.js  diffStrings.js  globalStats.vue  graphResults.vue  header.vue  searchArguments.vue  searchForm.vue  searchResults.vue  timeSeries.vue
web/web_app/src/router/: index.js
web/wsgi_scripts/: text-align.wsgi  text-pair.wsgi
