[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "textpair_llm"
version = "0.1.0"
description = "LLM server management and evaluation utilities for TextPair"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "ARTFL Project", email = "artfl@uchicago.edu"}
]
license = {text = "MIT"}

dependencies = [
    "aiohttp>=3.12",
    "requests",
    "tqdm",
]

[project.scripts]
textpair_llama_server = "textpair_llm.llama_server_manager:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["textpair_llm*"]
